To do:
* check if get directory entries uses previous/next node

* add support for extended attribute (named fork) data stream with LIBFSHFS_ATTRIBUTE_RECORD_TYPE_EXTENTS
* for extended attributes by name look up use native B-tree structures

* info handle implement is_empty ?

* handle (hard) link count differently for indirect node files in /␀␀␀␀HFS+ Private Data/
* what about a symbolic link to HFS+ Private data directory?

* on file_entry_initialize lookup com.apple.decmpfs specifically instead of all attributes?
* catalog B-tree file, include name in branch key check
* file entry API: add extents functions

* add support to print information about special files (those without a catalog record) ?

* classic HFS
** fshfsinfo: add support retrieving non-directory file entries using fshfsinfo -E
*** files in classic HFS do not need to have a thread record
** API: add option to set file system encoding
** API: add means to determine if date and time values are in local time or UTC
** API: determine how to represent file mode
** add support for Mac OS codepages
** pass IO handle to directory, file and thread records to validate record types ?
** correct file record extents with extents start

Format support:
* implement support for classic HFS pre Mac OS 9.0
* implement support for HFS+/HFX Unicode 2.1 version
* implement support for folder and file information
* implement support for extended folder and file information

20160605
* see `git log' for more recent change log
* worked on format support

20160604
* worked on format support

20160603
* worked on format support

20160228
* worked on format support

20160227
* worked on format support

20160226
* worked on format support

20160220
* worked on format support

20160217
* 2016 update

20090212
* Initial version
