@@ -491,14 +491,13 @@ int libfshfs_file_entry_get_group_identifier(
      libfshfs_error_t **error );
 
 /* Retrieves the device number
- * This value is retrieved from the inode
  * Returns 1 if successful, 0 if not available or -1 on error
  */
 LIBFSHFS_EXTERN \
 int libfshfs_file_entry_get_device_number(
      libfshfs_file_entry_t *file_entry,
-     uint8_t *major_device_number,
-     uint8_t *minor_device_number,
+     uint32_t *major_device_number,
+     uint32_t *minor_device_number,
      libfshfs_error_t **error );
 
 /* Retrieves the size of the UTF-8 encoded name
