@@ -1,4 +1,4 @@
-.Dd July  8, 2022
+.Dd July  9, 2022
 .Dt libfshfs 3
 .Os libfshfs
 .Sh NAME
@@ -117,7 +117,7 @@ File entry functions
 .Ft int
 .Fn libfshfs_file_entry_get_group_identifier "libfshfs_file_entry_t *file_entry" "uint32_t *group_identifier" "libfshfs_error_t **error"
 .Ft int
-.Fn libfshfs_file_entry_get_device_number "libfshfs_file_entry_t *file_entry" "uint8_t *major_device_number" "uint8_t *minor_device_number" "libfshfs_error_t **error"
+.Fn libfshfs_file_entry_get_device_number "libfshfs_file_entry_t *file_entry" "uint32_t *major_device_number" "uint32_t *minor_device_number" "libfshfs_error_t **error"
 .Ft int
 .Fn libfshfs_file_entry_get_utf8_name_size "libfshfs_file_entry_t *file_entry" "size_t *utf8_string_size" "libfshfs_error_t **error"
 .Ft int
